Use overflow: hidden to prevent the canvas child from disrupting the layout

--- a/resize-observer-pixi/src/main.css
+++ b/resize-observer-pixi/src/main.css
@@ -5,6 +5,7 @@ body {
   overflow: hidden;
 }
 
+/* the flexRoot contains: status, parent, hint */
 .flexRoot {
   display: flex;
   flex-direction: column;
@@ -13,18 +14,24 @@ body {
   height: 100vh;
 }
 
-/* the parent holds: status, canvas, hint */
+/* the parent contains: just the canvas element, which observes the parent dimensions */
 .parent {
   border: 4px solid red;
   flex: 1;
+  /* center the only child element: the canvas */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* prevent the canvas child disrupting the layout */
+  overflow: hidden;
 }
 
 canvas {
-  position: absolute;
   width: 1020px;
   height: 1020px;
   background-color: yellow;
   border: 4px green dotted;
+  /* draw the border inside of the canvas element */
   box-sizing: border-box;
 }
 
